# MLops-image-classification

./: .pre-commit-config.yaml  README.md  dataloader.py  main.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
conf/: config.yaml  config_infer.yaml  train_cfg.yaml
conf/dataloader/: dataloader_cfg.yaml
conf/train/: train_cfg.yaml
image_classification/: dataloader.py  infer.py  model.py  test.py  train.py  utils.py
outputs/2024-01-04/14-09-09/: train.log.dvc
outputs/2024-01-05/16-11-16/: train.log.dvc
outputs/2024-01-05/16-18-32/: train.log.dvc
outputs/2024-01-05/17-02-14/: predictions.csv.dvc
outputs/2024-01-05/17-12-47/: .gitignore  predictions.csv.dvc  train.log.dvc
outputs/2024-01-05/17-12-47/.hydra/: config.yaml  hydra.yaml
