[tool.poetry]
name = "image-classification"
version = "0.1.0"
description = ""
authors = ["EdA20 <ed9119@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scikit-learn = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
dvc = "^3.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
